// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundedButton styled components S.Wrap matches snapshot active 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#ffffff",
      "borderColor": "#000000",
      "borderRadius": 24,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
      "width": 48,
    }
  }
/>
`;

exports[`RoundedButton styled components S.Wrap matches snapshot inactive 1`] = `
<View
  accessible={true}
  focusable={false}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#000000",
      "borderColor": "#ffffff",
      "borderRadius": 24,
      "borderStyle": "solid",
      "borderWidth": 1,
      "flexShrink": 0,
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "overflow": "hidden",
      "width": 48,
    }
  }
/>
`;
